# zstd-rs

./: Cargo.toml
examples/: bench_decoder.rs  bench_encoder.rs  corpus.rs
src/: lib.rs
src/stream/: encoder.rs
