[package]
authors = ["Alexandre Bury <alexandre.bury@gmail.com>"]
build = "src/build.rs"
description = "Rust zstd bindings library."
documentation = "https://gyscos.github.io/zstd-rs/zstd/index.html"
license = "MIT"
name = "zstd"
repository = "https://github.com/Gyscos/zstd-rs"
version = "0.1.6"

[build-dependencies]
gcc = "0.3.28"
glob = "0.2.11"

[dependencies]
libc = "0.2"

[dependencies.clippy]
optional = true
version = "0.0.76"

[dev-dependencies]
clap = "2.6.0"
hyper = "0.9.8"
rustc-serialize = "0.3.19"
time = "0.1.35"
zip = "0.1.17"

[[example]]
name = "bench_decoder"
path = "examples/bench_decoder.rs"

[[example]]
name = "bench_encoder"
path = "examples/bench_encoder.rs"

[features]
default = []
